Set Wild Apricot ID on a member
